--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,139 @@
+absl-py==0.2.2
+astor==0.7.1
 backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
-backports.weakref==1.0rc1
-bleach==1.5.0
-cloudpickle==0.5.3
+backports.weakref==1.0.post1
+beautifulsoup4==4.5.3
+bleach==2.0.0
+boto==2.44.0
+cachetools==2.1.0
+cffi==1.11.5
+chardet==2.3.0
+configparser==3.3.0.post2
+crcmod==1.7
+cryptography==1.7.1
+cvxopt==1.1.4
 cycler==0.10.0
-dask==0.18.2
+Cython==0.28.4
 decorator==4.3.0
+entrypoints==0.2.2.post2
 enum34==1.1.6
 funcsigs==1.0.2
+functools32==3.2.3.post2
 futures==3.2.0
-html5lib==0.9999999
+gast==0.2.0
+google-api-python-client==1.7.4
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
+google-compute-engine==2.8.3
+grpcio==1.13.0
+h5py==2.7.0
+horovod==0.13.10
+html5lib==0.999999999
+httplib2==0.9.2
+idna==2.2
+ipaddress==1.0.17
 ipdb==0.11
 ipykernel==4.8.2
-ipython==5.8.0
+ipython==5.7.0
 ipython-genutils==0.2.0
+ipywidgets==5.2.2
+jdcal==1.0
+jedi==0.10.0
+Jinja2==2.8
+joblib==0.10.4.dev0
+jsonschema==2.6.0
 jupyter-client==5.2.3
 jupyter-core==4.4.0
+jupyter-tensorboard==0.1.6
+jupyterlab==0.32.1
+jupyterlab-launcher==0.10.5
+Keras==2.2.0
+Keras-Applications==1.0.2
+Keras-Preprocessing==1.0.1
+keyring==10.1
+keyrings.alt==1.3
 kiwisolver==1.0.1
-Markdown==2.2.0
+lxml==3.7.1
+Markdown==2.6.8
+MarkupSafe==0.23
 matplotlib==2.2.2
+mistune==0.8.3
 mock==2.0.0
-networkx==2.1
-numpy==1.11.0
-pandas==0.23.4
+nbconvert==5.3.1
+nbformat==4.4.0
+networkx==1.11
+nltk==3.2.1
+nose==1.3.7
+notebook==5.6.0
+numexpr==2.6.1
+numpy==1.15.0
+oauth2client==3.0.0
+object-detection==0.1
+openpyxl==2.3.0
+pandas==0.19.2
+pandocfilters==1.4.2
 pathlib2==2.3.2
-pbr==4.2.0
+patsy==0.4.1+dev
+pbr==4.1.1
 pexpect==4.6.0
 pickleshare==0.7.4
 Pillow==5.2.0
+pkg-resources==0.0.0
+prometheus-client==0.3.0
 prompt-toolkit==1.0.15
 protobuf==3.6.0
 ptyprocess==0.6.0
+py==1.4.32
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
+pycparser==2.18
+pycrypto==2.6.1
 Pygments==2.2.0
+pygobject==3.22.0
+pygraphviz==1.4rc1
+pyinotify==0.9.6
+pyOpenSSL==16.2.0
 pyparsing==2.2.0
+pytest==3.0.6
 python-dateutil==2.7.3
 pytz==2018.5
-PyWavelets==0.5.2
+pyxdg==0.25
+PyYAML==3.12
 pyzmq==17.1.0
-scandir==1.8
-scikit-image==0.14.0
-scipy==1.1.0
+requests==2.12.4
+rsa==3.4.2
+scandir==1.7
+scikit-image==0.12.3
+scikit-learn==0.18
+scipy==0.18.1
+SecretStorage==2.3.1
+Send2Trash==1.5.0
 simplegeneric==0.8.1
+simplejson==3.10.0
 singledispatch==3.4.0.3
 six==1.11.0
+slim==0.1
+statsmodels==0.8.0rc1
+stevedore==1.29.0
 subprocess32==3.5.2
-tensorflow-gpu==1.2.0
-toolz==0.9.0
+tables==3.3.0
+tensorboard==1.9.0
+tensorflow-gpu==1.9.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
 tornado==5.1
+tqdm==4.11.2
 traitlets==4.3.2
+uritemplate==3.0.0
+urllib3==1.19.1
+virtualenv==15.1.0
+virtualenv-clone==0.3.0
+virtualenvwrapper==4.8.2
 wcwidth==0.1.7
-Werkzeug==0.14.1
+webencodings==0.5
+Werkzeug==0.11.15
+xlrd==1.0.0
+xlwt==0.7.5
